add links to wiki pages

--- a/README
+++ b/README
@@ -1,1 +1,14 @@
-A Lua driver for mongodb
+##A Lua driver for mongodb
+ 
+
+This project is a fork of this project on googlecode:  <http://code.google.com/p/luamongo/>
+
+[[BsonTypes]]
+
+[[HelperFunctions]]
+
+[[GridFS]]
+
+[[MongoConnection]]
+
+[[MongoCursor]]
