--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+luamongo (0.4-1ubuntu2) lucid; urgency=low
+
+  * Fix dependencies to correct Mongo versions.
+  * Package cleanup: Bump standards version and fix debhelper version
+
+ -- Ubuntu <ubuntu@ip-10-110-213-19.ec2.internal>  Sun, 09 Oct 2011 13:11:21 +0000
+
 luamongo (0.4-1ubuntu1) lucid; urgency=low
 
   * Backporting to Lucid
